--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,30 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>com.evaldo</groupId>
+	<artifactId>cursomc</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>cursomc</name>
+	<description>Workshop Spring Boot</description>
+	
+	<build>
+     <plugins>
+      <plugin>
+        <groupId>com.heroku.sdk</groupId>
+        <artifactId>heroku-maven-plugin</artifactId>
+        <version>3.0.3</version>
+      </plugin>
+    </plugins>
+  </build>
+	
+	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.3.BUILD-SNAPSHOT</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.evaldo</groupId>
-	<artifactId>cursomc</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>cursomc</name>
-	<description>Workshop Spring Boot</description>
 
 	<properties>
 		<java.version>11</java.version>
@@ -65,7 +78,7 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
